# aeth_ext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backup rich_log_stream.py  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: format-check.yml
docker/: .dockerignore  Dockerfile  compose.yaml  docker-compose.yaml  entrypoint.sh
docker/scripts/: detect_app_extra.py  get_chown_paths.py  get_launch_script.py  get_mkdirs.py  get_readme.py
scripts/: release.sh
src/aeth_ext/: __init__.py  _search_for_subclasses.py  const_parsing.py  monkey_patcher.py  settings.py  static_eval.py  subclass_searchengine.py  utils.py
src/aeth_ext/central_log_server/: __init__.py  __main__.py  _types.py  protocol.py  settings.py  startup.py
src/aeth_ext/central_log_server/client/: __init__.py  filters.py  history.py
src/aeth_ext/central_log_server/server/: dispatch.py  id_registry.py  reader_server.py  state_server.py  writer_thread.py
src/aeth_ext/central_log_server/web_viewer/: __init__.py  __main__.py  logging_config.py  logging_config_socket.toml  patches.py  remote_logging_config.toml  server.py  wake.py
src/aeth_ext/central_log_server/web_viewer/screens/: log_picker.py  log_stream.py  log_stream.tcss  program_screen.py  program_selection.py  program_selection.tcss
src/aeth_ext/central_log_server/web_viewer/templates/: app_index.html
src/aeth_ext/command_client/: client.py  connection.py  discovery.py
src/aeth_ext/command_server/: __init__.py  base.py  decorators.py  local_registry.py  protocol.py
src/aeth_ext/errors/: __init__.py  err_handling.py  send_alert_email.py
src/aeth_ext/ftp/: __init__.py  adapter.py  errors.py  types.py
src/aeth_ext/logging/: bases.py  config.py  dict_config.py  init.py  schema_cli.py  setup.py
src/aeth_ext/logging/config/: __init__.py  loader.py  merge.py  models.py  runtime_registry.py
src/aeth_ext/logging/config/defaults/: __init__.py  async_queue.toml  console_plain.toml  console_rich.toml  file_daily.toml  file_per_run.toml  log_server_root.toml  logging_config_schema.json  main_base.toml  remote_daily.toml  remote_per_run.toml  server_hierarchy_daily.toml  server_hierarchy_per_run.toml  socket_client.toml  worker.toml
src/aeth_ext/rich/: __init__.py  progress.py
src/aeth_ext/shared_log_processor/: __init__.py  __main__.py  client.py  log_socket_server.py  log_writer_thread.py  protocol.py  settings.py  startup.py
src/aeth_ext/shared_log_processor/client/: __init__.py  __init__.py.py  filters.py  history.py  id_checkpoint.py
src/aeth_ext/shared_log_processor/server/: dispatch.py  id_registry.py  reader_server.py  state_server.py  writer_thread.py
src/aeth_ext/shared_log_processor/web_viewer/: __init__.py  __main__.py  server.py  wake.py
src/aeth_ext/shared_log_processor/web_viewer/screens/: log_picker.py  log_stream.py  program_screen.py  program_screen.tcss  program_selection.py
src/aeth_ext/types/: __init__.py  abc.py  subclass_capture.py
src/sft_ext/: __init__.py  _search_for_subclasses.py  const_parsing.py  monkey_patcher.py  settings.py  utils.py
src/sft_ext/errors/: err_handling.py  send_alert_email.py
src/sft_ext/ftp/: adapter.py  types.py
src/sft_ext/logging/: bases.py  config.py  init.py  init_logging.py  logging_bases.py  logging_config.py
src/sft_ext/logging_ext/: init_logging.py  logging_config.py
src/sft_ext/rich/: progress.py
src/sft_ext/types/: __init__.py  abc.py
tests/: test_static_eval.py
tests/central_log_server/: __init__.py  conftest.py  test_client.py  test_client_filters.py  test_dispatch.py  test_protocol.py  test_reader_server.py  test_writer_thread.py
tests/logging/: conftest.py  test_converters.py  test_dict_config.py  test_init.py  test_loader.py  test_merge.py  test_private_hierarchy.py  test_runtime_registry.py  test_setup.py
typings/cloudpickle_temp/: __init__.pyi  cloudpickle.pyi  cloudpickle_fast.pyi
