[project]
  name            = "aeth-ext"
  version         = "2.1.1"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.14"
  authors         = [
    { name = "Jacob Ogden", email = "jacob.ogden@yahoo.com" },
  ]
  dependencies    = [
    "aiologic>=0.16.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "tzdata>=2026.2",
  ]

  [project.optional-dependencies]
    async = [
      "uvloop>=0.22.1 ; sys_platform == 'linux'",
      "winloop>=0.6.0 ; sys_platform == 'win32'",
    ]
    sftp  = ["paramiko>=5.0.0"]

[dependency-groups]
  dev = [
    "paramiko>=5.0.0",
    "poe-tasks",
    "pyright>=1.1.409",
    "types-python-dateutil>=2.9.0.20260518",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
  ]

[build-system]
  requires      = ["uv_build>=0.11.2,<0.12.0"]
  build-backend = "uv_build"

[tool.poe]
  include_script = "poe_tasks:tasks"

[tool.pyright]
  extends = "../pyproject.toml"

[tool.ruff]
  extend = "../pyproject.toml"

  src = ["./src"]

  [tool.ruff.lint.flake8-type-checking]
    runtime-evaluated-base-classes = [
      "aeth_ext.settings.BaseSettings",
      "aeth_ext.types.__init__.EmailMessageParts",
      "aeth_ext.types.__init__.AddressLike",
      "pydantic_settings.main.BaseSettings",
      "aeth_ext.types.AddressLike",
      "pydantic.main.BaseModel",
      "aeth_ext.types.IsPydantic",
    ]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true

  [tool.uv.sources]
    poe-tasks = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../poe_tasks", editable = true, marker = "sys_platform == 'win32'" },
    ]
