[project]
  name            = "aeth-ext"
  version         = "3.2.1"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.14"
  authors         = [
    { name = "Jacob Ogden", email = "jacob.ogden@yahoo.com" },
  ]
  dependencies    = [
    "aiologic>=0.16.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "tzdata>=2026.2",
  ]

  [project.optional-dependencies]
    async     = [
      "uvloop>=0.22.1 ; sys_platform == 'linux'",
      "winloop>=0.6.0 ; sys_platform == 'win32'",
    ]
    logserver = [
      "aiohttp>=3.14.1",
      "cloudpickle>=3.1.2",
      "textual>=8.2.8",
      "textual-serve>=1.1.3",
      "textual-speedups>=0.2.1",
      "textual-web>=0.4.2",
      "typer>=0.26.8",
    ]
    sftp      = ["paramiko>=5.0.0"]

[dependency-groups]
  dev = [
    "aiohttp>=3.14.1",
    "cloudpickle>=3.1.2",
    "debugpy>=1.8.21",
    "paramiko>=5.0.0",
    "poe-tasks>=4.0.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.409",
    "ruff>=0.13.0",
    "textual>=8.2.8",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
    "textual-speedups>=0.2.1",
    "textual-web>=0.4.2",
    "typer>=0.26.8",
    "types-python-dateutil>=2.9.0.20260518",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
  ]

[build-system]
  requires      = ["uv_build>=0.11.2,<0.12.0"]
  build-backend = "uv_build"

[tool.poe]
  include_script = "poe_tasks:tasks"

[tool.pyright]
  extends                = "../pyproject.toml"
  reportMissingTypeStubs = false

[tool.ruff]
  extend = "../pyproject.toml"

  indent-width = 2

  src = ["./src"]

  [tool.ruff.format]
    indent-style = "space"

  [tool.ruff.lint.flake8-type-checking]
    runtime-evaluated-base-classes = [
      "aeth_ext.settings.BaseSettings",
      "aeth_ext.types.__init__.EmailMessageParts",
      "aeth_ext.types.__init__.AddressLike",
      "pydantic_settings.main.BaseSettings",
      "aeth_ext.types.AddressLike",
      "pydantic.main.BaseModel",
      "aeth_ext.types.IsPydantic",
      "aeth_ext.types.IsPydanticSlots",
    ]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true

  [tool.uv.sources]
    poe-tasks = [
      { index = "SFTPyPI" },
      # , marker = "sys_platform == 'linux'"
      # { path = "../poe_tasks", editable = true, marker = "sys_platform == 'win32'" },
    ]
