[project]
  name            = "aeth-ext"
  version         = "4.2.9"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.14"
  authors         = [
    { name = "Jacob Ogden", email = "jacob.ogden@yahoo.com" },
  ]
  dependencies    = [
    "aiologic>=0.16.0",
    "cloudpickle>=3.1.2",
    "orjson>=3.10.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "tzdata>=2026.2",
  ]

  [project.scripts]
    aeth-ext-logging-schema    = "aeth_ext.logging.schema_cli:app"
    run-app-central-log-server = "aeth_ext.central_log_server.__main__:app"

  [project.optional-dependencies]
    app       = ["aeth-ext[logserver]"]
    async     = [
      "uvloop>=0.22.1 ; sys_platform == 'linux'",
      "winloop>=0.6.0 ; sys_platform == 'win32'",
    ]
    logserver = [
      "aiohttp>=3.14.1",
      "textual>=8.2.8",
      "textual-serve>=1.1.3",
      "textual-speedups>=0.2.1",
      "textual-web>=0.4.2",
      "uvloop>=0.22.1 ; sys_platform == 'linux'",
      "winloop>=0.6.0 ; sys_platform == 'win32'",
    ]
    sftp      = ["paramiko>=5.0.0"]

[dependency-groups]
  dev = [
    "aiohttp>=3.14.1",
    "cloudpickle>=3.1.2",
    "debugpy>=1.8.21",
    "paramiko>=5.0.0",
    "poe-tasks>=4.0.0",
    "py-yaml12>=0.1.0",
    "pyright>=1.1.409",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.13.0",
    "textual>=8.2.8",
    "textual-dev>=1.8.0",
    "textual-serve>=1.1.3",
    "textual-speedups>=0.2.1",
    "textual-web>=0.4.2",
    "typer>=0.26.8",
    "types-python-dateutil>=2.9.0.20260518",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
  ]

[build-system]
  requires      = ["uv_build>=0.11.2,<0.12.0"]
  build-backend = "uv_build"

[tool.coverage.run]
  data_file   = ".cache/.coverage"
  source_pkgs = ["aeth_ext"]

[tool.coverage.report]
  show_missing = true

[tool.docker]
  # Paths relative to /app that the entrypoint will chown to nonroot:nonroot.
  # Typically these are directories that will be bind-mounted as Docker volumes.
  chown_paths = [
    "persisted_data",
  ]
  # Paths relative to /app that the entrypoint will create (mkdir -p) and chown.
  # These are implicitly included in the chown step.
  mkdirs = []

[tool.poe]
  include_script = "poe_tasks:tasks"

[tool.pyright]
  extends                   = "../pyproject.toml"
  reportMissingTypeStubs    = false
  reportMissingTypeArgument = false

[tool.pytest.ini_options]
  addopts      = [
    "--cov",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
    "-ra"
  ]
  cache_dir    = ".cache/pytest"
  testpaths    = ["tests"]
  xfail_strict = true
  asyncio_mode = "auto"

[tool.ruff]
  extend    = "../pyproject.toml"
  cache-dir = ".cache/ruff"

  indent-width = 2

  src = ["./src"]

  [tool.ruff.lint.flake8-type-checking]
    runtime-evaluated-base-classes = [
      "aeth_ext.settings.BaseSettings",
      "aeth_ext.types.__init__.EmailMessageParts",
      "aeth_ext.types.__init__.AddressLike",
      "pydantic_settings.main.BaseSettings",
      "aeth_ext.types.AddressLike",
      "pydantic.main.BaseModel",
      "aeth_ext.types.IsPydantic",
      "aeth_ext.types.IsPydanticSlots",
    ]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true

  [tool.uv.sources]
    poe-tasks = [
      { index = "SFTPyPI" },
      # , marker = "sys_platform == 'linux'"
      # { path = "../poe_tasks", editable = true, marker = "sys_platform == 'win32'" },
    ]
